--- a/Beehive/Classes/Modules/Home/Partner/View/LLPricingTableViewCell.xib
+++ b/Beehive/Classes/Modules/Home/Partner/View/LLPricingTableViewCell.xib
@@ -26,8 +26,18 @@
                             <constraint firstAttribute="height" constant="0.5" id="aPL-wB-Wf1"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="郑和" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d69-xd-QQG">
-                        <rect key="frame" x="10" y="17" width="27" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="定价" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d69-xd-QQG">
+                        <rect key="frame" x="10" y="16" width="35" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="1J4-uF-Z8n"/>
+                            <constraint firstAttribute="width" constant="35" id="Jyc-la-81U"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="郑和" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWG-xc-QtZ">
+                        <rect key="frame" x="52" y="17" width="27" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -50,10 +60,10 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 2400.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GWn-k8-f1d">
-                        <rect key="frame" x="184" y="18" width="55" height="14"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" red="1" green="0.68627450980000004" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 2400.00/年" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GWn-k8-f1d">
+                        <rect key="frame" x="158" y="17" width="81" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -61,15 +71,23 @@
                     <constraint firstAttribute="trailing" secondItem="sgG-qm-ead" secondAttribute="trailing" constant="10" id="3b4-6N-e4M"/>
                     <constraint firstItem="sgG-qm-ead" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="7lq-65-0dQ"/>
                     <constraint firstAttribute="trailing" secondItem="Gcx-kX-Dxo" secondAttribute="trailing" id="BKW-fu-owC"/>
+                    <constraint firstItem="MWG-xc-QtZ" firstAttribute="leading" secondItem="d69-xd-QQG" secondAttribute="trailing" constant="7" id="DIF-ok-K6x"/>
                     <constraint firstItem="Gcx-kX-Dxo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="De7-Q0-vwD"/>
                     <constraint firstItem="GWn-k8-f1d" firstAttribute="centerY" secondItem="d69-xd-QQG" secondAttribute="centerY" id="Eyn-Zy-98u"/>
                     <constraint firstItem="sgG-qm-ead" firstAttribute="leading" secondItem="GWn-k8-f1d" secondAttribute="trailing" constant="15" id="S1O-YB-S6s"/>
                     <constraint firstItem="d69-xd-QQG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XjR-SJ-YTF"/>
                     <constraint firstAttribute="bottom" secondItem="Gcx-kX-Dxo" secondAttribute="bottom" id="pHG-cm-Qkb"/>
+                    <constraint firstItem="MWG-xc-QtZ" firstAttribute="centerY" secondItem="d69-xd-QQG" secondAttribute="centerY" id="ro4-mn-Wmr"/>
                     <constraint firstItem="d69-xd-QQG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ulh-xr-TtH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="areaNameLabel" destination="MWG-xc-QtZ" id="gmQ-01-pVZ"/>
+                <outlet property="buyButton" destination="sgG-qm-ead" id="nsm-52-nGX"/>
+                <outlet property="priceLabel" destination="GWn-k8-f1d" id="VkY-xh-7fZ"/>
+                <outlet property="typeLabel" destination="d69-xd-QQG" id="qJt-m6-DOD"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
