--- a/Beehive/Classes/Modules/Mine/BeeLobby/View/LLBeeLobbyHeaderView.xib
+++ b/Beehive/Classes/Modules/Mine/BeeLobby/View/LLBeeLobbyHeaderView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" ambiguous="YES" id="U7a-PX-U8k" customClass="LLBeeLobbyHeaderView">
+        <view contentMode="scaleToFill" id="U7a-PX-U8k" customClass="LLBeeLobbyHeaderView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="422"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -143,7 +143,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jhy-p1-vww">
-                    <rect key="frame" x="10" y="235" width="355" height="82.5"/>
+                    <rect key="frame" x="10" y="235" width="355" height="83"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Jhy-p1-vww" secondAttribute="height" multiplier="30:7" id="cl6-Vr-6zR"/>
                     </constraints>
@@ -152,7 +152,7 @@
                         <action selector="adsAction:" destination="U7a-PX-U8k" eventType="touchUpInside" id="h5S-OQ-EJg"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbL-ab-g4U">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbL-ab-g4U">
                     <rect key="frame" x="10" y="328" width="172.5" height="83"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="zbL-ab-g4U" secondAttribute="height" multiplier="29:14" id="qxk-dr-idD"/>
@@ -162,7 +162,7 @@
                         <action selector="inviteAction:" destination="U7a-PX-U8k" eventType="touchUpInside" id="XsX-uV-BVH"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sM3-YG-OX4">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sM3-YG-OX4">
                     <rect key="frame" x="192.5" y="328" width="172.5" height="83"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="sM3-YG-OX4" secondAttribute="height" multiplier="29:14" id="dqz-xj-CUh"/>
@@ -183,7 +183,6 @@
                 <constraint firstItem="zbL-ab-g4U" firstAttribute="leading" secondItem="U7a-PX-U8k" secondAttribute="leading" constant="10" id="Xnx-R0-La1"/>
                 <constraint firstItem="sM3-YG-OX4" firstAttribute="leading" secondItem="zbL-ab-g4U" secondAttribute="trailing" constant="10" id="ZsX-eD-2cE"/>
                 <constraint firstItem="Do3-Ki-rD6" firstAttribute="trailing" secondItem="gmj-5C-y7S" secondAttribute="trailing" constant="10" id="epJ-EO-tJl"/>
-                <constraint firstItem="Do3-Ki-rD6" firstAttribute="bottom" secondItem="sM3-YG-OX4" secondAttribute="bottom" constant="11" id="hsm-Do-oXX"/>
                 <constraint firstItem="Do3-Ki-rD6" firstAttribute="trailing" secondItem="Jhy-p1-vww" secondAttribute="trailing" constant="10" id="pWh-oG-FSL"/>
                 <constraint firstItem="Jhy-p1-vww" firstAttribute="top" secondItem="gmj-5C-y7S" secondAttribute="bottom" constant="10" id="r26-nR-nrb"/>
                 <constraint firstItem="sM3-YG-OX4" firstAttribute="width" secondItem="sM3-YG-OX4" secondAttribute="height" multiplier="29:14" id="rar-Kh-w77"/>
