--- a/Beehive/Classes/Modules/Mine/BeeLobby/Controller/LLAdsBidDetailsViewController.xib
+++ b/Beehive/Classes/Modules/Mine/BeeLobby/Controller/LLAdsBidDetailsViewController.xib
@@ -28,10 +28,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="282" y="179"/>
+            <point key="canvasLocation" x="418" y="178"/>
         </view>
         <view contentMode="scaleToFill" id="2iU-4M-Mip">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="305"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="435"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWo-xo-eZe">
@@ -138,22 +138,34 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QKz-Xq-UA5">
-                    <rect key="frame" x="0.0" y="160" width="375" height="95"/>
+                    <rect key="frame" x="0.0" y="160" width="375" height="225"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9X-80-UAg">
+                            <rect key="frame" x="0.0" y="95" width="375" height="10"/>
+                            <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="10" id="2Et-Dr-wFa"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="95" id="yFg-u6-kR3"/>
+                        <constraint firstItem="t9X-80-UAg" firstAttribute="top" secondItem="gR1-oc-rFv" secondAttribute="top" constant="95" id="Kdq-r0-TyC"/>
+                        <constraint firstItem="t9X-80-UAg" firstAttribute="leading" secondItem="gR1-oc-rFv" secondAttribute="leading" id="Yrn-bS-EU4"/>
+                        <constraint firstItem="t9X-80-UAg" firstAttribute="trailing" secondItem="gR1-oc-rFv" secondAttribute="trailing" id="rem-Pl-ac5"/>
+                        <constraint firstAttribute="height" constant="225" id="yFg-u6-kR3"/>
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="gR1-oc-rFv"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQT-Hp-jAV">
-                    <rect key="frame" x="0.0" y="255" width="375" height="10"/>
+                    <rect key="frame" x="0.0" y="385" width="375" height="10"/>
                     <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="10" id="b2R-0N-x8H"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NZL-RG-35W">
-                    <rect key="frame" x="0.0" y="265" width="375" height="40"/>
+                    <rect key="frame" x="0.0" y="395" width="375" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5_7_2_1.2" translatesAutoresizingMaskIntoConstraints="NO" id="qiD-5L-THH">
                             <rect key="frame" x="10" y="12.5" width="15" height="15"/>
